# arangoq

./: .gitlab-ci.yml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  createArangoDatabase.sh  gitlab-ci.yml
.github/workflows/: run-live-tests.yml
arangoq_derive/: Cargo.toml
arangoq_derive/src/: lib.rs
book/: book.toml
book/src/: QUERY_KIND.md  SUMMARY.md
src/: actor.rs  actor_async.rs  arango_api.rs  arango_connection.rs  arango_impl.rs  arango_mock.rs  arango_response.rs  arango_test.rs  database.rs  lib.rs
src/test/: arango_mock.rs  mod.rs
tests/: async_live_test.rs  createArangoUser.sh  integration_test.rs  live_test.rs
