[package]
name = "arangoq"
version = "0.3.1"
authors = ["Andras Mocsary <nobody@reedwolf.com>", "Balázs Söptei <bsoptei@gmail.com>"]
repository = "https://github.com/element114/arangoq"
documentation = "https://docs.rs/arangoq"
license = "MIT OR Apache-2.0"
description = "An AQL query builder layer and ArangoDb client for rust."
edition = "2018"
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = { version = "0.9", optional = true }
# actix = { path = "./actix" }
arangoq_derive = { path = "./arangoq_derive" }
futures = "0.3"
log = "0.4"
maplit = "1.0"
reqwest = { version = "0.10", features = ["json"] }
# reqwest = { version = "0.9" }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"

[features]
# no features by default
default = []
actors = ["actix"]

[dev-dependencies]
actix-rt = "1.0"
actix-web = "2.0"
env_logger = "0.7.1"
lazy_static = "1.4.0"
mockito = "0.23.3"
proptest = "0.9"
proptest-derive = "0.1.2"
